fixed letter spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,7 +37,7 @@ body {
     size: 100%;
     family: $primary-font; // variables inside partials > _variables.scss
   }
-  letter-spacing: 0.03em;
+  letter-spacing: 0.125px;
 }
 
 .wc-container {
